--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,10 +30,10 @@
   <!-- bulma css  -->
   <link rel="stylesheet" href="/assets/css/bulma.min.css" />
   <!-- Custom CSS -->
-  {{ with $style := resources.Get "/assets/sass/main.scss" | resources.ToCSS | resources.PostCSS | resources.Minify }}
+  <!-- {{ with $style := resources.Get "/assets/sass/main.scss" | resources.ToCSS | resources.PostCSS | resources.Minify }}
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
-  {{ end }}
-  <!-- <link rel="stylesheet" href="/assets/css/style.css" /> -->
+  {{ end }} -->
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
 <body>
