searchbar and load more button comment and category title add

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -86,11 +86,17 @@
         <div class="blog-left-sidebar">
 
           <!-- search-bar start  -->
-          <div class="search-bar">
+          <!-- <div class="search-bar">
             <input type="search" name="search" placeholder="Search">
             <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-          </div>
+          </div> -->
           <!-- search-bar end -->
+
+          <!-- categories title  -->
+          <div class="category-title">
+            <h3>Categories</h3>
+          </div>
+          <!-- categories title  -->
 
           <!-- category start  -->
           <div class="blog-category">
@@ -137,9 +143,9 @@
         </div>
         <div class="columns">
           <div class="column has-text-centered">
-            <div class="load-more-button">
+            <!-- <div class="load-more-button">
               <a href="#" class="button is-sm-medium is-primary">Load more</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
