--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
         <!-- blog heading start  -->
         <div class="blog-heading">
           <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "2-Jan-2006" }}</p>
-          <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
+          <h1>{{ .Title }}</h1>
           {{ if or .Params.author .Site.Params.author }}
           <p class="author"><span>by </span><a href="#">{{ .Params.author | default .Site.Params.author }}</a></p>
           {{ end }}
