--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -794,7 +794,8 @@ p.spam-message {
 
 .blog-left-sidebar {
   position: sticky;
-  top: 120px; }
+  top: 120px;
+  padding-left: 10px; }
 
 .search-bar {
   position: relative;
@@ -822,6 +823,27 @@ p.spam-message {
     font-size: 28px;
     line-height: 1;
     cursor: pointer; }
+
+.category-title {
+  position: relative;
+  z-index: 1;
+  margin-left: -8px; }
+  .category-title:before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 5px;
+    height: 100%;
+    background: #333;
+    padding-left: 5px;
+    border-radius: 2px; }
+  .category-title h3 {
+    font-size: 22px;
+    font-weight: 700;
+    padding-left: 15px;
+    margin-bottom: 10px;
+    line-height: 1; }
 
 .blog-category ul li a {
   font-size: 16px;
