--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -108,6 +108,7 @@
 .blog-left-sidebar {
   position: sticky;
   top: 120px;
+  padding-left: 10px;
 }
 // search-bar start
 .search-bar {
@@ -144,6 +145,30 @@
   }
 }
 // category start
+.category-title {
+  position: relative;
+  z-index: 1;
+  margin-left: -8px;
+  &:before {
+    position: absolute;
+     content: ""; 
+    left: 0;
+    top: 0;
+    width: 5px;
+    height: 100%;
+    background: #333;
+    padding-left: 5px;
+    border-radius: 2px;
+  }
+  h3 {
+    font-size: 22px;
+    font-weight: 700;
+    padding-left: 15px;
+    margin-bottom: 10px;
+    line-height: 1;
+  }
+}
+
 .blog-category {
   ul {
     li {
