add clipboard js and social share email button add

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -50,7 +50,7 @@
     <!-- header-area top start -->
     {{ block "header-top" . }}
     <div class="header-top">
-      <div class="container section">
+      <div class="container">
         <nav class="navbar customize-navbar" role="navigation" aria-label="main navigation">
           <!-- navbar brand start -->
           <div class="navbar-brand">
@@ -342,6 +342,7 @@
   <!-- go-to-top end -->
 
   <!-- Main JS -->
+  <script src="/assets/js/clipboard.min.js"></script>
   <script src="/assets/js/main.js"></script>
 </body>
 
