--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -24,9 +24,6 @@
             <div class="social-link-vertical">
               <ul>
                 <li>
-                  <a class="is-static" href="#"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-                </li>
-                <li>
                   <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" class="twitter"
                     aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 </li>
@@ -37,6 +34,9 @@
                 <li>
                   <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" class="facebook"
                     aria-label="share on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                  <a href="mailto:xyz@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                 </li>
               </ul>
             </div>
