--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -40,9 +40,6 @@
           <div class="social-link-vertical">
             <ul>
               <li>
-                <a class="is-static"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-              </li>
-              <li>
                 <a title="Twitter" href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title | htmlEscape }}" class="twitter"
                   aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
@@ -53,6 +50,9 @@
               <li>
                 <a title="Facebook" href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" class="facebook"
                   aria-label="share on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="mailto:xyz@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
@@ -70,13 +70,13 @@
                 <h4>PostgreSQL database</h4>
               </div>
               <div class="copy-button">
-                <button class="copy-here" title="Copy">
+                <button class="copy-here" data-clipboard-target="#copyHere" title="Copy">
                   <img src="/assets/images/icons/copy.svg" alt="copy-icon">
                 </button>
               </div>
             </div>
             <!-- code title end -->
-            <pre style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-yaml" data-lang="yaml">apiVersion: kubedb.com/v1alpha1
+            <pre style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-yaml" data-lang="yaml" id="copyHere">apiVersion: kubedb.com/v1alpha1
               kind: Postgres
               metadata:
                 name: quick-postgres
@@ -92,6 +92,9 @@
                     requests:
                       storage: 1Gi
                 terminationPolicy: DoNotTerminate</code></pre>
+
+
+
           </div>
 
           {{ .Content }}
