--- a/static/assets/sass/base/_global.scss
+++ b/static/assets/sass/base/_global.scss
@@ -182,8 +182,9 @@ button.button {
     font-size: 16px;
   }
 }
-.section {
-  padding: 0 15px;
+.container.section {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 .d-table {
   display: table;
@@ -432,7 +433,7 @@ textarea.textarea {
 **************************************************************** */
 @media only screen and (min-width: 100px) and (max-width: 768px) {
   .button.is-large {
-    padding: 20px 30px;
+    padding: 20px 25px;
     font-size: 14px;
   }
   .button.is-sm-medium {
