--- a/static/assets/sass/base/_global.scss
+++ b/static/assets/sass/base/_global.scss
@@ -290,7 +290,7 @@ textarea.textarea {
   }
 }
 //vertical social link style
-.social-link-vertical {
+.social-link-vertical,.social-link-horizontal {
   ul {
     li {
       display: block;
@@ -335,6 +335,25 @@ textarea.textarea {
             }
           }
         }
+      }
+    }
+  }
+}
+.social-link-horizontal {
+  ul {
+    li {
+      display: inline-block;
+      margin-right: 10px;
+      &:last-child {
+        margin-right: 0;
+      }
+      a {
+        font-size: 15px;
+        display: block;
+        text-align: center;
+        line-height: 30px;
+        width: 30px;
+        height: 30px;
       }
     }
   }
