--- a/static/assets/sass/components/_header.scss
+++ b/static/assets/sass/components/_header.scss
@@ -5,7 +5,7 @@
   top: 0;
   transition: 0.1s ease;
   .header-top {
-    padding: 10px 0;
+    padding: 10px 15px;
   }
 }
 body.fixed-nav #header {
