add responsive auth page

--- a/layouts/_default/author.html
+++ b/layouts/_default/author.html
@@ -17,15 +17,15 @@
             <ul>
               <li>
                 <a href="http://twitter.com/share?url=http%3a%2f%2flocalhost%3a1313%2fauthor%2f01%2f&amp;text=Author%20page"
-                  class="twitter" aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  target="_blank" class="twitter" aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2flocalhost%3a1313%2fauthor%2f01%2f&amp;title=Author%20page&amp;summary="
-                  class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  target="_blank" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
               </li>
               <li>
                 <a href="http://www.facebook.com/sharer.php?u=http%3a%2f%2flocalhost%3a1313%2fauthor%2f01%2f"
-                  class="facebook" aria-label="share on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  target="_blank" class="facebook" aria-label="share on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
               <li>
                 <a href="mailto:xyz@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
