--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -24,15 +24,15 @@
             <div class="social-link-vertical">
               <ul>
                 <li>
-                  <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" class="twitter"
+                  <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" class="twitter"
                     aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}&summary={{ .Summary }}"
+                  <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}&summary={{ .Summary }}" target="_blank"
                     class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" class="facebook"
+                  <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" target="_blank" class="facebook"
                     aria-label="share on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 </li>
                 <li>
@@ -93,7 +93,7 @@
           <!-- search-bar end -->
 
           <!-- categories title  -->
-          <div class="category-title">
+          <div class="widget-title">
             <h3>Categories</h3>
           </div>
           <!-- categories title  -->
