--- a/static/assets/sass/base/_global.scss
+++ b/static/assets/sass/base/_global.scss
@@ -344,6 +344,7 @@ textarea.textarea {
     li {
       display: inline-block;
       margin-right: 10px;
+      margin-bottom: 0;
       &:last-child {
         margin-right: 0;
       }
