--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -1,6 +1,6 @@
-.author-hero-area{
+.author-hero-area {
   padding: 120px 0 40px;
-  border-bottom: 1px solid #EAEBF5;
+  border-bottom: 1px solid #eaebf5;
 }
 .author-content {
   .image {
@@ -8,10 +8,12 @@
     height: 165px;
     margin: 0 auto;
   }
-  p{
+  p {
     font-size: 16px;
   }
-  .image,h3,p{
+  .image,
+  h3,
+  p {
     margin-bottom: 20px;
   }
 }
@@ -22,8 +24,54 @@
       height: 36px;
       padding: 0 30px;
       font-size: 14px;
-      color: #74818D;
-      background: #EAEBF5;
+      color: #74818d;
+      background: #eaebf5;
     }
   }
 }
+
+/*=================================================================================================
+                                    Responsive code start
+=================================================================================================*/
+/**************************************************************** 
+                  Full HD Min Width 1407
+**************************************************************** */
+/* Full HD Min Width 1408px */
+@media (min-width: 1408px) {
+}
+
+/**************************************************************** 
+                  Widescreen Between 1216px and 1407px
+**************************************************************** */
+@media (min-width: 1216px) and (max-width: 1407px) {
+}
+
+/**************************************************************** 
+                  Desktop Between 1024px and 1215px
+**************************************************************** */
+@media (min-width: 1024px) and (max-width: 1215px) {
+}
+
+/**************************************************************** 
+                  Tablet Between 769px and 1023px
+**************************************************************** */
+@media (min-width: 769px) and (max-width: 1023px) {
+}
+
+/**************************************************************** 
+                    Mobile Up to 768px. 
+**************************************************************** */
+@media only screen and (min-width: 100px) and (max-width: 768px) {
+  .author-content {
+    .image {
+      margin-bottom: 20px;
+    }
+    h3{
+      margin-bottom: 10px;
+    }
+  }
+}
+
+/*=================================================================================================
+                                    Responsive code end
+=================================================================================================*/
