--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
           <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "2-Jan-2006" }}</p>
           <h1>{{ .Title }}</h1>
           {{ if or .Params.author .Site.Params.author }}
-          <p class="author"><span>by </span><a href="#">{{ .Params.author | default .Site.Params.author }}</a></p>
+          <p class="author"><span>by </span><a href="http://localhost:1313/author/01/">{{ .Params.author | default .Site.Params.author }}</a></p>
           {{ end }}
         </div>
         <!-- blog heading end -->
