--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -69,14 +69,16 @@
               <div class="code-title">
                 <h4>PostgreSQL database</h4>
               </div>
-              <div class="copy-button">
+              <div class="copy-and-download">
+                <button class="download-here"><i class="fa fa-download" aria-hidden="true"></i></button>
                 <button class="copy-here" data-clipboard-target="#copyHere" title="Copy">
                   <img src="/assets/images/icons/copy.svg" alt="copy-icon">
                 </button>
               </div>
             </div>
             <!-- code title end -->
-            <pre style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-yaml" data-lang="yaml" id="copyHere">apiVersion: kubedb.com/v1alpha1
+            <pre style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4">
+              <code class="language-yaml" data-lang="yaml" id="copyHere">apiVersion: kubedb.com/v1alpha1
               kind: Postgres
               metadata:
                 name: quick-postgres
