--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -343,7 +343,7 @@
 
   <!-- Main JS -->
   <script src="/assets/js/clipboard.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.js"></script>
+  <script src="/assets/js/download.min.js"></script>
   <script src="/assets/js/main.js"></script>
 </body>
 
