--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,10 +30,10 @@
   <!-- bulma css  -->
   <link rel="stylesheet" href="/assets/css/bulma.min.css" />
   <!-- Custom CSS -->
-  <!-- {{ with $style := resources.Get "/assets/sass/main.scss" | resources.ToCSS | resources.PostCSS | resources.Minify }}
+  {{ with $style := resources.Get "/assets/sass/main.scss" | resources.ToCSS | resources.PostCSS | resources.Minify }}
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
-  {{ end }} -->
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  {{ end }}
+  <!-- <link rel="stylesheet" href="/assets/css/style.css" /> -->
 </head>
 
 <body>
@@ -342,9 +342,11 @@
   <!-- go-to-top end -->
 
   <!-- Main JS -->
-  <script src="/assets/js/clipboard.min.js"></script>
-  <script src="/assets/js/download.min.js"></script>
   <script src="/assets/js/main.js"></script>
+  <!-- download js  -->
+  <script src="https://unpkg.com/downloadjs@1.4.7/download.min.js"></script>
+  <!-- clipboard js  -->
+  <script src="https://unpkg.com/clipboard@2/dist/clipboard.min.js"></script>
 </body>
 
 </html>
